# Weighted-Instruction-Analysis-Pass

./: .gitignore  CMakeLists.txt  DESIGN.md  ENHANCEMENTS.md  EVALUATION.md  EXECUTION_COMMANDS.md  EXPLANATION.txt  EXTRAORDINARY_FEATURES.md  IMPLEMENTATION.md  INDEX.md  MAC_RUN_GUIDE.md  README.md  SUMMARY.txt  USAGE_GUIDE.md  VMWARE_KALI_GUIDE.md  WRITEUP.md  WeightedPass.cpp  analysis_toolkit.py  build.sh  run.sh  run_analysis.ps1  run_analysis.sh  test1.ll  test2.ll
analysis_results/: 20260712_103223_analysis.txt  20260712_103223_report.txt
docs/: theory_and_stepwise_guide.md
src/: WeightedPass.cpp
testcases/: test1.c  test1.ll  test2.c  test2.ll
